--- a/src/test/java/resources/application.properties
+++ b/src/test/java/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.show-sql=true
 
-spring.datasource.url=jdbc:mariadb://localhost/library
+spring.datasource.url=jdbc:mariadb://localhost:3307/library-test?useUnicode=true
 spring.datasource.username=library
 spring.datasource.password=library
 
